--- a/WEBSCRP/css/Tbuyer.css
+++ b/WEBSCRP/css/Tbuyer.css
@@ -38,14 +38,15 @@ div.basketTable > *:nth-child(2n - 1){
 	box-shadow:0 0ex 1px rgba(0,0,0,0.5) inset;
 }
 	
-div.basketTable > *:hover{
+.basketIdWrap:hover{
 	/* onHover */
 	background-color: #fd9;
 	box-shadow:0 0ex 6px rgba(0,0,0,0.5);
 }
 
 
-div.basketTable > *:active{
+
+.basketIdWrap:active{
 	background-color: #fea;
 }
 
