--- a/WEBSCRP/css/Tbuyer.css
+++ b/WEBSCRP/css/Tbuyer.css
@@ -24,6 +24,24 @@ body
 	padding-bottom:20px;
 }
 
+.updateButton{
+	margin-top: 0px;
+	margin-bottom: 0px;
+	margin-left: 50%;
+	margin-right: 40%;
+	box-shadow:0 0ex 2px rgba(0,0,0,0.5) inset;
+}
+
+.updateButton:hover{
+	background-color: #fd9;
+	box-shadow:0 0ex 6px rgba(0,0,0,0.5);
+}
+
+.updateButton:active{
+	background-color: #fea;
+}
+
+
 .basketTable{
 	width: 80%;
 	box-shadow:0 0ex 1px rgba(0,0,0,0.5) inset;
@@ -69,7 +87,7 @@ div.basketTable > *:nth-child(1){
 }
 
 .basketQuanWrap{
-	width: 30%;
+	width: 10%;
 	float:left;
 }
 
