--- a/WEBSCRP/css/Tbuyer.css
+++ b/WEBSCRP/css/Tbuyer.css
@@ -31,6 +31,24 @@ body
 	box-shadow:0 0ex 2px;
 }
 
+.addStock:active{
+	background-color: #fea;
+}
+
+.addStock:hover{
+	background-color: #fd9;
+	box-shadow:0 0ex 6px;
+}
+
+.addStock{
+	float:right;
+	height:19px;
+	width:19px; /*square */
+	box-shadow: 0 0ex 2px rgba(0,0,0,0.5);
+	margin-right: 40px;
+	
+}
+
 .choiceObject:hover{
 	background-color: #fd9;
 	box-shadow:0 0ex 6px;
@@ -59,6 +77,7 @@ body
 
 
 .basketTable{
+	font-size:15px
 	width: 80%;
 	box-shadow:0 0ex 1px rgba(0,0,0,0.5) inset;
 	margin-left: 10%;
@@ -100,16 +119,19 @@ div.basketTable > *:nth-child(1){
 .basketIdWrap{
 	width: 20%;
 	float:left;
+	height: 19px;
 }
 
 .basketQuanWrap{
 	width: 10%;
 	float:left;
+	height: 19px;
 }
 
 .basketPriceWrap{
 	width: 20%;
 	float:right;
+	height: 19px;
 }
 
 	
