--- a/WEBSCRP/612136/css/Tbuyer.css
+++ b/WEBSCRP/612136/css/Tbuyer.css
@@ -1,4 +1,4 @@
-
+/*default colour scheme */
 *
 {
 	font-family:arial;
@@ -318,7 +318,6 @@ div.basketTable > *:nth-child(1){
 	margin-bottom: 20px;
 	width: 80%;
 	height: 20%;
-	/*border: 1px solid #999999;*/
 	
 }
 
@@ -344,13 +343,13 @@ select
 
 ul
 {
-	font-family: Arial;
 	font-size: 20px;
 	margin: 0;
 	padding: 0;
 	list-style: none;
+	
 }
-ul li 
+ul li
 {
 	display: block;
 	position: relative;
@@ -362,21 +361,17 @@ ul li
 
 li ul 
 { 
-	display: none; 
+	display: none; /*holds hisplay together */
 }
 
-.menuCase
-/* formats the actual menu items */
-{
+.menuCase{
 	display: block;
-	text-decoration: none;
-	color: #000000;
 	border-left: 1px solid #000000;
-	/*border-right: 1px solid #000000;*/
+	text-decoration: none;
+	color: #000000; /* removes hyperlink look */
 	padding: 5px 15px 5px 15px;
 	background: #FFCC88;
 	margin-left: 1px;
-	white-space: nowrap;
 }
 
 ul li a:hover 
@@ -386,14 +381,14 @@ ul li a:hover
 
 li:hover ul 
 {
-  display: block;
-  position: absolute;
+	display: block;
+	position: absolute;
 }
 
 li:hover li 
 {
-  float: none;
-  font-size: 20px;
+	float: none;
+	font-size: 20px;
 }
 
 li:hover a 
@@ -461,118 +456,9 @@ header
 	oveflow: auto;
 }
 
-/*@media screen and (max-width:650px) {
-
-
-    header{
-		padding-top: 1em;
-		position: fixed;
-		width:100%;
-		right:0px;
-		min-width: 380px;
-		top: 0px;
-		height: 150px;
-		background-color:#FFCC88;
-    }
-	
-	.logo
-	{
-		top:0;
-		right: 0;
-		float:right;
-		padding-left: 20%;
-		padding-right: 20%;
-	}
-	
-	.dropDown
-	{
-		top:60px;
-		right: 0;
-		float:right;
-		padding-left: 30%;
-		padding-right: 30%;
-		overflow: auto;
-	}
-	
-	.mainContent
-	{
-		background-color : #FFFFFF;
-		margin-top:200px;
-		margin-bottom:2%;
-		margin-right:10%;
-		margin-left:10%;
-		overflow: auto;
-	}
-	
-
-	
-	.leftDiv
-	{
-		width: 100%;
-		float: none;
-	}
-	
-	.rightDiv
-	{
-		width: 100%;
-		float: none;
-	}
-	
-	
-	
-	.searchForm
-	{
-		width: 300px;
-		padding-left: 20%;
-		right: 30px;
-		overflow: auto;
-		float: right;
-	}
-	
-	.search
-	{
-		left: 50 px;
-		overflow: auto;
-	}
-
-	
-	.menuCase
-	
-	
-	{
-		float: right;
-		display: block;
-		text-decoration: none;
-		color: #000000;
-		border-left: 1px solid #000000;
-		border-right: 1px solid #000000;
-		padding: 1px 4px 1px 4px;
-		background: #FFCC88;
-		margin-right: 30%;
-		white-space: nowrap;
-		
-	}
-	
-	
-	li:hover li 
-	{
-		float: none;
-		font-size: 16px;
-	}
-	
-	ul
-	{
-		font-family: Arial;
-		font-size: 16px;
-		margin: 0;
-		padding: 0;
-		list-style: none;
-	}
-	}
-	
-	*/
 
 /* drag drop uploader style */
+/* http://github.com/portsoc/dragupload */
 
 .dragBox {
 	float: left;
