--- a/WEBSCRP/612136/css/Tbuyer.css
+++ b/WEBSCRP/612136/css/Tbuyer.css
@@ -18,10 +18,17 @@ body
 	margin-right:10%;
 	margin-left:10%;
 	overflow: auto;
-	min-width: 700px;
+	min-width: 500px;
 	border-radius: 25px;
 	-moz-border-radius: 25px;
 	padding-bottom:20px;
+}
+
+.charRemaining{
+	margin-top: -5px;
+	margin-left:3px;
+	font-size: 12px;
+	opacity: 0.7;
 }
 
 .orderTable{
@@ -107,6 +114,7 @@ div.orderTable > *:nth-child(1){
 .invalidBox{
 	background-color: #FF8D8D
 }
+
 
 .addStock:active{
 	background-color: #fea;
