--- a/WEBSCRP/612136/css/Tbuyer.css
+++ b/WEBSCRP/612136/css/Tbuyer.css
@@ -15,8 +15,8 @@ body
 	background-color: #FFFFFF;
 	margin-top:80px;
 	margin-bottom:2%;
-	margin-right:10%;
-	margin-left:10%;
+	margin-right:6%;
+	margin-left:6%;
 	overflow: auto;
 	min-width: 500px;
 	border-radius: 25px;
@@ -33,14 +33,14 @@ body
 
 .orderTable{
 	font-size:15px;
-	width: 90%;
+	width: 95%;
 	box-shadow:0 0ex 1px rgba(0,0,0,0.5) inset;
-	margin-left: 5%;
+	margin-left: 2.5%;
 	margin-right: 5%;
 }
 
 .buyerInfoWrap{
-	width: 15%;
+	width: 16%;
 	height: 19px;
 	float:left;
 }
@@ -67,13 +67,13 @@ body
 }
 
 .postCodeWrap{	
-	width: 10%;
+	width: 13%;
 	height: 19px;
 	float:left;
 }
 
 .buyerEmailWrap{
-	width: 20%;
+	width: 25%;
 	height: 19px;
 	float:left;
 }
@@ -412,7 +412,10 @@ li:hover li a:hover
 
 .logo
 {
-float: left;
+	float: left;
+	margin: 2px;
+	font-size: 40px;
+	color: black;
 }
 
 .leftDiv
@@ -457,6 +460,9 @@ header
 .headerSearch
 {
 	padding-top: 10px;
+	float: left;
+	margin-top: 6px;
+	margin-left: 60px;
 }
 
 .select
