started on suggested search

--- a/WEBSCRP/612136/css/dynamic.css
+++ b/WEBSCRP/612136/css/dynamic.css
@@ -4,6 +4,10 @@ body{
 	background-color:#FFDD99;
 }
 
+.searchSuggestion:hover{
+	background-color: #fd9;
+}
+
 .itemNameWrap:active{
 	background-color: #fea;
 }
