--- a/WEBSCRP/612136/css/Tbuyer.css
+++ b/WEBSCRP/612136/css/Tbuyer.css
@@ -24,6 +24,24 @@ body
 	padding-bottom:20px;
 }
 
+.searchSuggestion:hover{
+	background-color: #fd9;
+	box-shadow:0 0ex 6px;
+}
+
+.searchSuggestion{
+	z-index: 10000;
+	background-color: white;
+	margin-top: -40px;
+	margin-left: 246px;
+	width: 140px;
+	border-radius: 6px;
+	-moz-border-radius: 6px;
+	position: fixed;
+	box-shadow: 0px 0px 2px;
+	opacity: 0.8;
+}
+
 .charRemaining{
 	margin-top: -5px;
 	margin-left:3px;
