--- a/WEBSCRP/612136/css/dynamic.css
+++ b/WEBSCRP/612136/css/dynamic.css
@@ -1,90 +1,1 @@
-/*generated dynamically from user input*/
-
-body{
-	background-color:#FFDD99;
-}
-
-.searchSuggestion:hover{
-	background-color: #fd9;
-}
-
-.itemNameWrap:active{
-	background-color: #fea;
-}
-
-.itemNameWrap:hover{
-	background-color: #fd9;
-}
-.addStock:active{
-	background-color: #fea;
-}
-
-.addStock:hover{
-	background-color: #fd9;
-}
-
-.stockIdWrap:active{
-	background-color: #fea;
-}
-
-.stockIdWrap:hover{
-	background-color: #fd9;
-}
-
-.choiceObject:hover{
-	background-color: #fd9;
-}
-
-.choiceObject:active{
-	background-color: #fea;
-}
-.updateButton:hover{
-	background-color: #fd9;
-}
-
-.updateButton:active{
-	background-color: #fea;
-}
-
-.basketIdWrap:hover{
-	background-color: #fd9;
-}
-
-.basketIdWrap:active{
-	background-color: #fea;
-}
-
-.browseDiv:hover{
-	box-shadow: 0px 0px 8px #DDBB77;
-}
-
-.browseDiv:active{
-	box-shadow: 0px 0px 12px #BB9955;
-}
-
-.menuCase{
-	background: #FFCC88;
-}
-
-ul li a:hover {
-	background: #FFDD99; 
-}
-
-li:hover a {
-	background: #FFDD99; 
-}
-
-li:hover li a:hover {
-	background: #FFCC88;
-}
-
-header{
-	background-color:#FFCC88;
-}
-
-.dragBox {
-	background: #FFDD99;
-}
-.dragBox:hover{
-	background:#FFCC88;
-}
+body{background-color:#FFEEEE;}.searchSuggestion:hover{background-color:#FFDDDD;}.itemNameWrap:active{background-color:#FFEEEE;}.itemNameWrap:hover{background-color:#FFDDDD;}.addStock:active{background-color:#FFEEEE;}.addStock:hover{background-color:#FFDDDD;}.stockIdWrap:active{background-color:#FFEEEE;}.stockIdWrap:hover{background-color:#FFDDDD;}.choiceObject:hover{background-color:#FFDDDD;}.choiceObject:active{background-color:#FFEEEE;}.updateButton:hover{background-color:#FFDDDD;}.updateButton:active{background-color:#FFEEEE;}.basketIdWrap:hover{background-color:#FFDDDD;}.basketIdWrap:active{background-color:#FFEEEE;}.browseDiv:hover{box-shadow:0px 0px 8px #FFDDDD;}.browseDiv:hover{box-shadow:0px 0px 8px #FFCCCC;}.menuCase{background:#FFCCCC;}ul li a:hover{background:#FFDDDD;}li:hover a{background:#FFDDDD;}li:hover li a:hover{background:#FFCCCC;}header{background-color:#FFCCCC;}.dragBox {background:#FFDDDD;}.dragBox:hover{background:#FFCCCC;}
