--- a/WEBSCRP/612136/css/Tbuyer.css
+++ b/WEBSCRP/612136/css/Tbuyer.css
@@ -41,7 +41,12 @@ body
 	padding-bottom:20px;
 }
 
-
+.response{
+	width:20%;
+	margin-left:40%;
+	border-radius:5px;
+	text-align: center;
+}
 
 .leftContent{
 	visibility:hidden;
@@ -129,7 +134,8 @@ body
 	z-index: 10000;
 	background-color: white;
 	margin-top: -40px;
-	margin-left: 206px;
+	margin-right: 467px;
+	right:0px;
 	width: 140px;
 	border-radius: 6px;
 	-moz-border-radius: 6px;
@@ -593,9 +599,9 @@ header
 .headerSearch
 {
 	padding-top: 10px;
-	float: left;
+	float: right;
 	margin-top: 6px;
-	margin-left: 60px;
+	margin-right: 30px;
 }
 
 .select
